--- a/Blogy.WebUI/Areas/Admin/Views/About/Index.cshtml
+++ b/Blogy.WebUI/Areas/Admin/Views/About/Index.cshtml
@@ -5,29 +5,75 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>About İçerikleri</h2>
+<div class="midde_cont">
+    <div class="container-fluid">
 
-<a href="/Admin/About/Create" class="btn btn-success mb-3">Yeni About Oluştur</a>
+        <!-- Sayfa Başlığı -->
+        <div class="row column_title">
+            <div class="col-md-12">
+                <div class="page_title">
+                    <h2>About İçerikleri</h2>
+                </div>
+            </div>
+        </div>
 
-<table class="table table-bordered table-striped">
-    <tr>
-        <th>#</th>
-        <th>Content</th>
-        <th>İşlemler</th>
-    </tr>
-    @{
-        int count = 0;
-    }
-    @foreach (var item in Model)
-    {
-        count++;
-        <tr>
-            <td>@count</td>
-            <td>@(item.Content.Length > 80 ? item.Content.Substring(0, 80) + "..." : item.Content)</td>
-            <td>
-                <a href="/Admin/About/Update/@item.Id" class="btn btn-info btn-sm">Güncelle</a>
-                <a href="/Admin/About/Delete/@item.Id" class="btn btn-danger btn-sm" onclick="return confirm('Silinsin mi?')">Sil</a>
-            </td>
-        </tr>
-    }
-</table>
+        <a href="/Admin/About/Create" class="btn btn-success mb-3">
+            <i class="fa fa-plus"></i> Yeni About Oluştur
+        </a>
+
+        <!-- Tablo Kartı -->
+        <div class="white_shd full margin_bottom_30">
+
+            <div class="full graph_head">
+                <div class="heading1 margin_0">
+                    <h3>About Listesi</h3>
+                </div>
+            </div>
+
+            <div class="full table_section padding_infor_info">
+                <div class="table-responsive-sm">
+
+                    <table class="table table-striped table-hover">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>İçerik</th>
+                                <th>İşlemler</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            @{
+                                int count = 0;
+                            }
+
+                            @foreach (var item in Model)
+                            {
+                                count++;
+                                <tr>
+                                    <td>@count</td>
+                                    <td>@(item.Content.Length > 80 ? item.Content.Substring(0, 80) + "..." : item.Content)</td>
+                                    <td>
+                                        <a href="/Admin/About/Update/@item.Id" class="btn btn-info btn-sm">
+                                            <i class="fa fa-edit"></i> Güncelle
+                                        </a>
+
+                                        <a href="/Admin/About/Delete/@item.Id"
+                                           class="btn btn-danger btn-sm"
+                                           onclick="return confirm('Silinsin mi?')">
+                                            <i class="fa fa-trash"></i> Sil
+                                        </a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+
+                    </table>
+
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
