--- a/Blogy.WebUI/Areas/Admin/Views/Category/Index.cshtml
+++ b/Blogy.WebUI/Areas/Admin/Views/Category/Index.cshtml
@@ -1,41 +1,84 @@
 ﻿@model List<ResultCategoryDto>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Kategoriler";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
+<div class="midde_cont">
+    <div class="container-fluid">
 
+        <div class="row column_title">
+            <div class="col-md-12">
+                <div class="page_title">
+                    <h2>Kategoriler</h2>
+                </div>
+            </div>
+        </div>
 
-<h3>Kategoriler</h3>
-@{
-    int count = 0;
+        <div class="row column1">
+            <div class="col-md-12">
+                <div class="white_shd full margin_bottom_30">
 
-}
+                    <div class="full graph_head d-flex justify-content-between align-items-center">
+                        <div class="heading1 margin_0">
+                            <h3>Kategori Listesi</h3>
+                        </div>
 
-<table class="table table-bordered table-hover">
-    <tr>
-        <th>#</th>
-        <th>Kategori Adı</th>
-        <th>İşlemler</th>
-    </tr>
+                        <a href="/Admin/Category/CreateCategory" class="btn btn-primary">
+                            <i class="fa fa-plus"></i> Yeni Kategori
+                        </a>
+                    </div>
 
-    @foreach (var item in Model)
-    {
-        count++;
-        <tr>
-            <th>@count</th>
-            <td>@item.Name</td>
-            <td>
-                <a href="/Admin/Category/DeleteCategory/@item.Id" class="btn btn-danger">Sil</a>
-                <a href="/Admin/Category/UpdateCategory/@item.Id" class="btn btn-info">Güncelle</a>
-            </td>
-        </tr>
-    }
+                    <div class="full table_section padding_infor_info">
+                        <div class="table-responsive-sm">
 
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                    <tr>
+                                        <th>#</th>
+                                        <th>Kategori Adı</th>
+                                        <th class="text-center">İşlemler</th>
+                                    </tr>
+                                </thead>
 
+                                <tbody>
+                                    @{
+                                        int count = 0;
+                                    }
 
+                                    @foreach (var item in Model)
+                                    {
+                                        count++;
+                                        <tr>
+                                            <td>@count</td>
+                                            <td>@item.Name</td>
 
-</table>
+                                            <td class="text-center">
 
+                                                <a href="/Admin/Category/UpdateCategory/@item.Id"
+                                                   class="btn btn-sm btn-info">
+                                                    <i class="fa fa-edit"></i> Güncelle
+                                                </a>
 
-<a href="/Admin/Category/CreateCategory" class="btn btn-primary">Yeni Kategori Oluştur</a>
+                                                <a href="/Admin/Category/DeleteCategory/@item.Id"
+                                                   class="btn btn-sm btn-danger"
+                                                   onclick="return confirm('Bu kategoriyi silmek istediğinize emin misiniz?');">
+                                                    <i class="fa fa-trash"></i> Sil
+                                                </a>
+
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+
+                            </table>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
