--- a/Blogy.WebUI/Areas/Admin/Views/Comment/Index.cshtml
+++ b/Blogy.WebUI/Areas/Admin/Views/Comment/Index.cshtml
@@ -1,35 +1,74 @@
 ﻿@model List<ResultCommentDto>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Yorumlar";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h3> Yorumlar</h3>
-@{
-    int count = 0;
-}
+<div class="midde_cont">
+    <div class="container-fluid">
 
-<table class="table table-bordered table-hover">
-    <tr>
-        <th>#</th>
-        <th>Blog Id</th>
-        <th>Yorum İçeriği</th>
-        <th>İşlemler</th>
-    </tr>
+        <div class="row column_title">
+            <div class="col-md-12">
+                <div class="page_title">
+                    <h2>Yorumlar</h2>
+                </div>
+            </div>
+        </div>
 
-    @foreach (var item in Model)
-    {
-        count++;
-        <tr>
-            <th>@count</th>
-            <td>@item.BlogId</td>
-            <td>@item.Content</td>
-            <td>
-                <a href="/Admin/Comment/DeleteComment/@item.Id" class="btn btn-danger">Sil</a>
-                <a href="/Admin/Comment/UpdateComment/@item.Id" class="btn btn-info">Güncelle</a>
-            </td>
-        </tr>
-    }
-</table>
+        <div class="row column1">
+            <div class="col-md-12">
+                <div class="white_shd full margin_bottom_30">
 
-<a href="/Admin/Comment/CreateComment" class="btn btn-primary">Yeni Yorum Oluştur</a>
+                    <div class="full graph_head d-flex justify-content-between align-items-center">
+                        <div class="heading1 margin_0">
+                            <h3>Yorum Listesi</h3>
+                        </div>
+                    </div>
+
+                    <div class="full table_section padding_infor_info">
+                        <table class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Blog Id</th>
+                                    <th>Yorum</th>
+                                    <th class="text-center">İşlemler</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @{
+                                    int count = 0;
+                                }
+
+                                @foreach (var item in Model)
+                                {
+                                    count++;
+                                    <tr>
+                                        <td>@count</td>
+                                        <td>@item.BlogId</td>
+                                        <td>@item.Content</td>
+
+                                        <td class="text-center">
+                                            <a href="/Admin/Comment/UpdateComment/@item.Id"
+                                               class="btn btn-sm btn-info">
+                                                <i class="fa fa-edit"></i> Güncelle
+                                            </a>
+
+                                            <a href="/Admin/Comment/DeleteComment/@item.Id"
+                                               class="btn btn-sm btn-danger"
+                                               onclick="return confirm('Bu yorumu silmek istediğinize emin misiniz?');">
+                                                <i class="fa fa-trash"></i> Sil
+                                            </a>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
