--- a/Blogy.WebUI/Views/Shared/Components/CategoryListSidebar/Default.cshtml
+++ b/Blogy.WebUI/Views/Shared/Components/CategoryListSidebar/Default.cshtml
@@ -1,15 +1,20 @@
 ﻿@model List<ResultCategoryDto>
 
-<div class="sidebar-box">
-    <h3 class="heading">Kategoriler</h3>
-    <ul class="categories">
+<div class="mb-4">
+    <h5 class="fw-bold mb-3">Kategoriler</h5>
+
+    <ul class="list-group">
         @foreach (var category in Model)
         {
-            <li>
-                <a href="/Blog/GetBlogsByCategory/@category.Id">
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <a href="/Blog/GetBlogsByCategory/@category.Id"
+                   class="text-decoration-none text-dark">
                     @category.Name
-                    <span>(@(category.Blogs?.Count ?? 0))</span>
                 </a>
+
+                <span class="badge bg-primary">
+                    @(category.Blogs?.Count ?? 0)
+                </span>
             </li>
         }
     </ul>
