--- a/Blogy.WebUI/Views/_ViewImports.cshtml
+++ b/Blogy.WebUI/Views/_ViewImports.cshtml
@@ -4,6 +4,7 @@
 @using Blogy.Business.DTOs.BlogDtos
 @using Blogy.Business.DTOs.UserDtos
 @using Blogy.Business.DTOs.AboutDtos
+@using Microsoft.AspNetCore.Identity
 @using System.Linq
 @using PagedList.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
